// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`value.boolean 1`] = `
<div>
  test component
  
  <span>
    value: 
    null
  </span>
   
  <div
    class="seu-radio-group"
  >
    <label
      class="seu-radio"
      role="radio"
      tabindex="-1"
    >
      <input
        aria-hidden="true"
        class="seu-radio__original"
        tabindex="-1"
        type="radio"
        value="true"
      />
       
      <span
        class="seu-radio__input"
      >
        <span
          class="seu-radio__inner"
        />
      </span>
       
      <span
        class="seu-radio__label"
      >
        a
      </span>
    </label>
    
    <label
      class="seu-radio"
      role="radio"
      tabindex="-1"
    >
      <input
        aria-hidden="true"
        class="seu-radio__original"
        tabindex="-1"
        type="radio"
        value="false"
      />
       
      <span
        class="seu-radio__input"
      >
        <span
          class="seu-radio__inner"
        />
      </span>
       
      <span
        class="seu-radio__label"
      >
        b
      </span>
    </label>
    
     
  </div>
</div>
`;

exports[`value.boolean 2`] = `
<div>
  test component
  
  <span>
    value: 
    true
  </span>
   
  <div
    class="seu-radio-group"
  >
    <label
      class="seu-radio"
      role="radio"
      tabindex="-1"
    >
      <input
        aria-hidden="true"
        class="seu-radio__original"
        tabindex="-1"
        type="radio"
        value="true"
      />
       
      <span
        class="seu-radio__input"
      >
        <span
          class="seu-radio__inner"
        />
      </span>
       
      <span
        class="seu-radio__label"
      >
        a
      </span>
    </label>
    
    <label
      class="seu-radio"
      role="radio"
      tabindex="-1"
    >
      <input
        aria-hidden="true"
        class="seu-radio__original"
        tabindex="-1"
        type="radio"
        value="false"
      />
       
      <span
        class="seu-radio__input"
      >
        <span
          class="seu-radio__inner"
        />
      </span>
       
      <span
        class="seu-radio__label"
      >
        b
      </span>
    </label>
    
     
  </div>
</div>
`;

exports[`value.boolean 3`] = `
<div>
  test component
  
  <span>
    value: 
    false
  </span>
   
  <div
    class="seu-radio-group"
  >
    <label
      class="seu-radio"
      role="radio"
      tabindex="-1"
    >
      <input
        aria-hidden="true"
        class="seu-radio__original"
        tabindex="-1"
        type="radio"
        value="true"
      />
       
      <span
        class="seu-radio__input"
      >
        <span
          class="seu-radio__inner"
        />
      </span>
       
      <span
        class="seu-radio__label"
      >
        a
      </span>
    </label>
    
    <label
      class="seu-radio"
      role="radio"
      tabindex="-1"
    >
      <input
        aria-hidden="true"
        class="seu-radio__original"
        tabindex="-1"
        type="radio"
        value="false"
      />
       
      <span
        class="seu-radio__input"
      >
        <span
          class="seu-radio__inner"
        />
      </span>
       
      <span
        class="seu-radio__label"
      >
        b
      </span>
    </label>
    
     
  </div>
</div>
`;
